--- a/styles/denuncie.css
+++ b/styles/denuncie.css
@@ -25,7 +25,7 @@ a:hover {
     
 }
 body{
-    background-image: linear-gradient( to right, rgb(136, 45, 211), rgb(158, 120, 194) );
+    background-color: rgb(136, 45, 211);
     font-family: sans-serif;
 }
 nav{
@@ -44,12 +44,13 @@ ul{
     flex-flow: row wrap;
 }
 form{
-    margin-top: 40%;
+    margin-top: 20%;
     
 }
 label{
-    font-size: 28px;
+    font-size: 58px;
     font-weight: 600;
+    
     color: rgb(0, 0, 0);
 }
 
@@ -58,17 +59,20 @@ input[type=text]{
     width: 300px;
     border: none;
     outline: none;
-    margin-left: 26%;
-    border-radius: 15px;
+    margin-left: 35%;
+    
     
 }
 
 input[type=submit]{
-    background: none;
+    background-color: rgba(165, 166, 167, 0.3);
+    color: rgb(255, 255, 255);
+    height: 50px;
+    width: 150px;
     border: none;
-    font-size: 42px;
+    font-size: 22px;
     cursor: pointer;
-    margin-left: 7%;
+    margin-left: 2%;
     
     
 }
