--- a/styles/login.css
+++ b/styles/login.css
@@ -1,88 +1,97 @@
 * {
     margin: 0;
-
     padding: 0;
+    box-sizing: border-box;
 }
 
-a{
-    color: rgb(0, 0, 0);
-    text-decoration: none;
-    transition: 0.3s;
+body {
+    font-family: Arial, sans-serif;
+    background-image: linear-gradient(to right, rgb(175, 175, 170), rgb(131, 133, 105));
+    color: #333;
+    line-height: 1.6;
 }
 
-a:hover {
-    opacity:0.7;
-
-
-}
-
-nav{
+nav {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: Arial, Helvetica, sans-serif;
-    background: rgba(224, 221, 224, 1.0);
-    height: 8vh;
+    background: rgb(224, 221, 224);
+    height: 7vh;
+}
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+.logo {
+    font-size: 30px;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    cursor: pointer;
+    color: #000;
+    text-decoration: none;
 }
 
-ul{
+#container {
     display: flex;
-    flex-flow: row wrap;
-}
-.logo{
-    font-size:32px;
-    text-transform:uppercase;
-    letter-spacing:4px;
-}
-body{
-    background-image: linear-gradient( to right, rgb(175, 175, 170), rgb(131, 133, 105) );
-    font-family: sans-serif;
-}
-
-li{
-    list-style-type: none;
-}
-#container{
-    display: grid;
+    justify-content: center;
     align-items: center;
-    justify-content: space-around;
-}
-#box_login{
-    display: flex;
-    background-color: rgb(232, 234, 236);
-    margin-top: 60%;
-    padding: 70px;
-    height: 300px;
-    justify-items: center;
+    min-height: 93vh;
 }
 
-input{
+#box_login {
+    background: #fff;
+    padding: 20px 30px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    max-width: 400px;
+    width: 100%;
+}
+
+form .text_login {
+    font-size: 24px;
+    font-weight: bold;
+    color: rgb(131, 133, 105);
+    text-align: center;
+    margin-bottom: 20px;
+    display: block;
+}
+
+input {
+    width: 100%;
+    padding: 12px;
+    margin-bottom: 15px;
+    border: 1px solid #f8f6f6;
+    font-size: 16px;
+}
+
+input:focus {
+    border-color: rgb(131, 133, 105);
     outline: none;
+    box-shadow: 0 0 5px rgba(131, 133, 105, 0.5);
+}
+
+.btEnviar_login {
+    width: 100%;
+    padding: 12px;
+    background-color: rgb(187, 189, 186);
     border: none;
-    height: 60px;
-    width: 240px;
-}
-input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button { 
-  -webkit-appearance: none; 
-}
-input:focus{
-    background-color: rgb(255, 255, 255);
-}
-.text_login{
-    font-size: 32px;
-    font-weight: 700;
-    margin-left: 30%;
-}
-.btEnviar_login{
+    color: #fff;
     font-size: 18px;
     cursor: pointer;
-    background-color: rgb(187, 189, 186);
+    transition: background 0.3s;
 }
-span{
-    font-weight: 600;
-    cursor: pointer;
+
+.btEnviar_login:hover {
+    background: rgb(143, 146, 96);
 }
-span:hover{
-    color: rgb(91, 91, 211);
-} 
+
+a {
+    color: rgb(131, 133, 105);
+    text-decoration: none;
+    font-size: 14px;
+}
+
+a span {
+    font-weight: bold;
+}
+ 
