--- a/styles/registro.css
+++ b/styles/registro.css
@@ -1,90 +1,82 @@
 * {
     margin: 0;
-
     padding: 0;
+    box-sizing: border-box;
 }
-body::-webkit-scrollbar {
-    display: none;  
+body {
+    font-family: Arial, sans-serif;
+    background-image: linear-gradient(to right, rgb(175, 175, 170), rgb(131, 133, 105));
+    color: #333;
+    line-height: 1.6;
 }
-a{
-    color: rgb(0, 0, 0);
-    text-decoration: none;
-    transition: 0.3s;
-}
-
-a:hover {
-    opacity:0.7;
-
-
-} 
-.a_login:hover{
-    color: rgb(143, 146, 96);
-}
-body{
-    font-family: sans-serif;
-    background-image: linear-gradient( to right, rgb(175, 175, 170), rgb(131, 133, 105) );
-}
-nav{
+nav {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: Arial, Helvetica, sans-serif;
     background: rgb(224, 221, 224);
     height: 7vh;
-    
 }
-
-ul{
-    display: flex;
-    flex-flow: row wrap;
-}
-li{
-    list-style-type: none;
-}
-
-.logo{
-    font-size:30px;
-    text-transform:uppercase;
-    letter-spacing:4px;
-    cursor: pointer;
-}
-#container{
-    display: flex;
-    justify-content: space-around;
-}
-input{
-    border-top: none;
-    border-left: none;
-    border-right: none;
-    outline: none;
-    height: 80px;
-    background-color: rgb(233, 233, 229);
-    width: 400px;
-    opacity: 80%;
-    border: none; 
-}
-input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button { 
-  -webkit-appearance: none; 
-}
-.btEnviar{
-    border-bottom: none;
-    font-size: 20px;
+.logo {
+    font-size: 30px;
     text-transform: uppercase;
+    letter-spacing: 4px;
     cursor: pointer;
-    background-color: rgb(249, 250, 249);
-}   
-
-.tela { 
-    margin: auto; 
-    margin-top: 4%;
-    height: 104%; /* Define a largura para controle do layout */  
-    display: flex;
-    justify-content: center; 
-    align-items: center; /* Centraliza horizontalmente */ 
-} 
-
-.a_login{
-    margin-left: 19%;
+    color: #000;
+    text-decoration: none;
 }
-
+#container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 93vh;
+}
+.tela {
+    background: #fff;
+    padding: 20px 30px; 
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    max-width: 400px;
+    width: 100%;
+}
+form h1 {
+    text-align: center;
+    margin-bottom: 20px;
+    color: rgb(131, 133, 105);
+}
+input {
+    width: 100%;
+    padding: 12px;
+    margin-bottom: 15px;
+    border: 1px solid #f8f6f6; 
+    font-size: 16px;
+}
+input:focus {
+    border-color: rgb(131, 133, 105);
+    outline: none;
+    box-shadow: 0 0 5px rgba(131, 133, 105, 0.5);
+}
+.btEnviar {
+    width: 100%;
+    padding: 12px;
+    background-color: rgb(187, 189, 186);
+    border: none; 
+    color: #fff;
+    font-size: 18px;
+    cursor: pointer;
+    transition: background 0.3s;
+}
+.btEnviar:hover {
+    background: rgb(143, 146, 96);
+}
+.login-link {
+    text-align: center;
+    margin-top: 10px;
+    font-size: 14px;
+}
+.login-link a {
+    color: rgb(131, 133, 105);
+    text-decoration: none;
+    font-weight: bold;
+}
+.login-link a:hover {
+    text-decoration: underline;
+}
