--- a/styles/suporte.css
+++ b/styles/suporte.css
@@ -114,6 +114,47 @@ button:hover{
     height: 20px;
     width: 20px;
 }
+/* Estilo para o modal */
+#modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    opacity: 1;
+}
+
+#modal.hidden {
+    display: none;
+}
+
+#modalContent {
+    background: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    max-width: 400px;
+    width: 80%;
+}
+
+#closeModal {
+    font-size: 24px;
+    cursor: pointer;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    color: #333;
+}
+
+#closeModal:hover {
+    color: red;
+}
 
 /*-------------------RESPONSIVO--------------------*/
 
